fix: hide overflow on run overview graphic

--- a/clj/src/slipstream/ui/views/css/run.css
+++ b/clj/src/slipstream/ui/views/css/run.css
@@ -1,3 +1,7 @@
+.ss-run-overview {
+    overflow: hidden;
+}
+
 .ss-run-overview .node {
     width: 200px;
     height: 58px;
